<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/outline_home_24"
        android:visible="true"
        app:showAsAction="always"
        android:title="@string/home"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/action_wiki"
        android:enabled="true"
        android:icon="@drawable/outline_info_24"
        android:visible="true"
        app:showAsAction="always"
        android:title="@string/wiki" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/outline_person_outline_24"
        android:visible="true"
        app:showAsAction="always"
        android:title="@string/profile" />

</menu>