<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_below="@id/line2"
        android:layout_alignStart="@id/etPassword"
        android:layout_alignEnd="@id/etPassword"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:fontFamily="@font/poppins_extralight"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="5sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_below="@+id/etEmailAddress"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:fontFamily="@font/poppins_extralight"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etConfPassword"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:fontFamily="@font/poppins_extralight"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="207dp"
        android:layout_height="234dp"
        android:layout_alignStart="@+id/etEmailAddress"
        android:layout_alignEnd="@+id/etEmailAddress"
        android:layout_alignParentTop="true"
        android:layout_marginStart="95dp"
        android:layout_marginTop="-28dp"
        android:layout_marginEnd="95dp"
        app:srcCompat="@drawable/g2gw" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivLogo"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-30dp"
        android:fontFamily="@font/poppins_medium"
        android:text="Sign Up"
        android:textColor="#000000"
        android:textSize="28sp" />

    <View
        android:id="@+id/line2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_below="@id/tvLogin"
        android:layout_alignStart="@id/tvLogin"
        android:layout_marginTop="-5dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/darker_gray" />


    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-75dp"
        android:fontFamily="@font/poppins_medium"
        android:text="Welcome to Got2Go!"
        android:textColor="#000000"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="337dp"
        android:layout_height="327dp"
        android:layout_below="@id/etPassword"
        android:layout_marginStart="40dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="40dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">


        <Button
            android:id="@+id/btnSigned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/Pink"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/sign_up"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnRedirectLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/Pink"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/login"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnSso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/Pink"
            android:text="Sign in with Google"
            android:textColor="#FFFFFF" />
    </LinearLayout>


</RelativeLayout>